--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_DrillSSwitcher.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_DrillSSwitcher.cfg
@@ -1,10 +1,15 @@
 @PART[*]:HAS[@MODULE[ModuleResourceHarvester,!WBIDrillSwitcher]]
 {
-    MODULE
-    {
-        name = WBIDrillSwitcher
-        requiredSkill = Engineer
-        requiredResource = Equipment
-        reconfigureCost = 20
-    }
+	MODULE
+	{
+		name = WBIDrillSwitcher
+		requiredSkill = Engineer
+		requiredResource = Equipment
+		reconfigureCost = 20
+	}
+
+	MODULE
+	{
+		name = WBIDrilOpsView
+	}
 }
