--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Snacks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Snacks.cfg
@@ -29,12 +29,6 @@
 
 		INPUT_RESOURCE
 		{
-			ResourceName = Dirt
-			Ratio = 0.025
-		}
-
-		INPUT_RESOURCE
-		{
 			ResourceName = ElectricCharge
 			Ratio = 3.5
 		}
@@ -43,52 +37,6 @@
 		{
 			ResourceName = Fertilizer
 			Ratio = .002
-			DumpExcess = false
-		}
-	}
-
-	MODULE
-	{
-		name = ModuleResourceConverter
-		ConverterName = Cultivator
-		StartActionName = Start Cultivator
-		StopActionName = Stop Cultivator
-		AutoShutdown = false
-		GeneratesHeat = false
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		Specialty = Scientist
-		EfficiencyBonus = 1
- 
-		INPUT_RESOURCE
-		{
-			ResourceName = Ore
-			Ratio = 0.002
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Minerals
-			Ratio = 0.001
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Fertilizer
-			Ratio = 0.002
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 3.5
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Dirt
-			Ratio = 0.00021
 			DumpExcess = false
 		}
 	}
@@ -111,15 +59,7 @@
 
 	RESOURCE
 	{
-		name = Ore
-		amount = 500
-		maxAmount = 500
-		isTweakable = false
-	}
-
-	RESOURCE
-	{
-		name = Dirt
+		name = Fertilizer
 		amount = 500
 		maxAmount = 500
 		isTweakable = false
@@ -159,7 +99,7 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = Fertilizer
-			Ratio = 0.0002
+			Ratio = 0.00002
 		}
 
 		INPUT_RESOURCE
@@ -168,41 +108,26 @@
 			Ratio = 6
 		}
 
-		INPUT_RESOURCE
-		{
-			ResourceName = Dirt
-			Ratio = 0.00001
-		}
-
 		REQUIRED_RESOURCE
 		{
-			ResourceName = Dirt
-			Ratio = 400
+			ResourceName = Fertilizer
+			Ratio = 100
 		}
-
 	}
 
 	RESOURCE
 	{
 		name = Fertilizer
-		amount = 700
-		maxAmount = 700
+		amount = 1000
+		maxAmount = 1000
 		isTweakable = true
 	}
 
 	RESOURCE
 	{
 		name = Water
-		amount = 700
-		maxAmount = 700
-		isTweakable = true
-	}
-
-	RESOURCE
-	{
-		name = Dirt
-		amount = 700
-		maxAmount = 700
+		amount = 1000
+		maxAmount = 1000
 		isTweakable = true
 	}
 
