--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Conestoga.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Conestoga.cfg
@@ -153,7 +153,7 @@ PART
 
 	MODULE
 	{
-		name = WBIConvertibleStorage
+		name = WBIMultipurposeStorage
 		enableLogging = True
 		isInflatable = false
 
@@ -166,7 +166,7 @@ PART
 		defaultTemplate = Bootstrap
 
 		//name of the template nodes to use
-		templateNodes = STORAGE_TEMPLATE;CONESTOGA
+		templateNodes = CONESTOGA;STORAGE_TEMPLATE
 
 		//Determines if the module allows in-field reconfiguring
 		fieldReconfigurable = True
