--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
@@ -123,6 +123,11 @@ PART
 
 	MODULE
 	{
+		name = WBISpyglassOpsView
+	}
+
+	MODULE
+	{
 		name = KASModuleStrut 
 		nodeTransform = plugPort
 		type = PipeSize1
