--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Clockworks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Clockworks.cfg
@@ -5,7 +5,7 @@ PATH_INDUSTRY
 	title = Clockworks 3D Print Shop
 	shortName = Clockworks
 	needs = Workshop
-	TechRequired = scienceTech
+	TechRequired = specializedConstruction
 	description = The Clockworks 3D Print Shop is the larger and more advanced cousin to the Blacksmith. In addition to having a 3D printer with five times the volume of the Blacksmith, you can create MaterialKits and even sift through Dirt to find ExoticMinerals and RareMetals. The Clockworks also comes equipped with a recycling unit to recycle stored items back to MaterialKits with a conversion rate of 45%.
 	mass = 5
 	requiredResource = Equipment
@@ -56,47 +56,6 @@ PATH_INDUSTRY
 			Ratio = 0.375
 			DumpExcess = false
 		}
-	}
-
-	MODULE
-	{
-		name = ModuleResourceConverter
-		ConverterName = Prospector
-		StartActionName = Start Prospector
-		StopActionName = Stop Prospector
-		AutoShutdown = false
-		GeneratesHeat = false
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		Specialty = Engineer
-		EfficiencyBonus = 1
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Dirt
-			Ratio = 1
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 5
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = ExoticMinerals
-			Ratio = 0.02
-			DumpExcess = True
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = RareMetals
-			Ratio = 0.02
-			DumpExcess = True
-		}		
 	}
 
 	RESOURCE
