--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/GeologyLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/GeologyLab.cfg
@@ -59,7 +59,7 @@ PATH_HABITATION
 
 	MODULE
 	{
-		name = ModuleResourceConverter
+		name = WBIProspector
 		ConverterName = Prospector
 		StartActionName = Start Prospector
 		StopActionName = Stop Prospector
@@ -71,30 +71,28 @@ PATH_HABITATION
 		Specialty = Scientist
 		EfficiencyBonus = 1
 
+		//Resource byproduct from prospecting that isn't part of the planetary/asteroid resource list.
+		byproduct = Slag
+
+		//Amount of input mass (units * density) that will become the byproduct mass. 
+		//Byproduct units produced depends upon the density of the byproduct. 
+		//This is the minimum, the actual amount will vary.
+		//Ore grades range from 25% to 75%
+		byproductMinPercent = 50.0
+
+		//Resources in the biome that should be ignored (and ther percentages added to the byproduct)
+		ignoreResources = GeoEnergy
+
 		INPUT_RESOURCE
 		{
-			ResourceName = Dirt
-			Ratio = 2
-		}
+			ResourceName = Ore
+			Ratio = 0.1
+		}		
 
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
 			Ratio = 5
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = ExoticMinerals
-			Ratio = 0.015
-			DumpExcess = True
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = RareMetals
-			Ratio = 0.015
-			DumpExcess = True
 		}		
 	}
 
