--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Ironworks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Ironworks.cfg
@@ -4,7 +4,7 @@ PATH_INDUSTRY
 	name = Ironworks
 	title = Ironworks Foundry
 	shortName = Ironworks
-	TechRequired = advMetalworks
+	TechRequired = specializedConstruction
 	description = The Ironworks Foundry is great for building vital rocket parts and material kits out in the field to spare you the trouble of hauling them all the way from Kerbin. It's also great for creating hot metal plates for frying eggs.
 	mass = 5
 	requiredResource = Equipment
