--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Nukeworks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Nukeworks.cfg
@@ -4,7 +4,7 @@ PATH_INDUSTRY
 	name = Nukeworks
 	title = Nukeworks Power Plant
 	shortName = Nukeworks
-	TechRequired = nuclearPropulsion
+	TechRequired = fieldScience
 	description = The Nukeworks is dedicated to processing raw Uranite into EnrichedUranium, and for reprocessing DepletedUranium into EnrichedUranium. It also gives you that healthy glow.
 	mass = 5
 	requiredResource = Equipment
