--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_USILS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_USILS.cfg
@@ -40,89 +40,19 @@
 		}
 	}
 
-	MODULE
-	{
-		name = ModuleResourceConverter
-		ConverterName = Cultivator
-		StartActionName = Start Cultivator
-		StopActionName = Stop Cultivator
-		AutoShutdown = false
-		GeneratesHeat = false
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		Specialty = Scientist
-		EfficiencyBonus = 1
- 
-		INPUT_RESOURCE
-		{
-			ResourceName = Organics
-			Ratio = 0.002
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Minerals
-			Ratio = 0.001
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Fertilizer
-			Ratio = 0.002
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 3.5
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Dirt
-			Ratio = 0.00021
-			DumpExcess = false
-		}
-	}
-
 	RESOURCE
 	{
 		name = Fertilizer
-		amount = 400
-		maxAmount = 400
+		amount = 1000
+		maxAmount = 1000
 		isTweakable = false
 	}
 
 	RESOURCE
 	{
 		name = Mulch
-		amount = 400
-		maxAmount = 400
-		isTweakable = false
-	}
-
-	RESOURCE
-	{
-		name = Organics
-		amount = 400
-		maxAmount = 400
-		isTweakable = false
-	}
-
-	RESOURCE
-	{
-		name = Dirt
-		amount = 400
-		maxAmount = 400
-		isTweakable = false
-	}
-
-	RESOURCE
-	{
-		name = Minerals
-		amount = 400
-		maxAmount = 400
+		amount = 1000
+		maxAmount = 1000
 		isTweakable = false
 	}
 }
@@ -171,21 +101,21 @@
 
 		INPUT_RESOURCE
 		{
-			ResourceName = Dirt
+			ResourceName = Mulch
 			Ratio = 0.00001
 		}
 
 		REQUIRED_RESOURCE
 		{
-			ResourceName = Dirt
-			Ratio = 400
+			ResourceName = Mulch
+			Ratio = 100
 		}
 
 	}
 
 	RESOURCE
 	{
-		name = Dirt
+		name = Mulch
 		amount = 1000
 		maxAmount = 1000
 		isTweakable = true
@@ -213,75 +143,6 @@
 		amount = 1000
 		maxAmount = 1000
 		isTweakable = true
-	}
-
-}
-
-@PATH_SCIENCE[Watney]:NEEDS[USILifeSupport]
-{
-	MODULE
-	{
-		name = ModuleResourceConverter
-		ConverterName = O-Chem
-		StartActionName = Start O-Chem
-		StopActionName = Stop O-Chem
-		AutoShutdown = false
-		GeneratesHeat = false
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		Specialty = Engineer
-		EfficiencyBonus = 1
-
- 
-		INPUT_RESOURCE
-		{
-			ResourceName = Ore
-			Ratio = 0.02
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Water
-			Ratio = 0.002
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Minerals
-			Ratio = 0.02
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 48
-		}
-
-		OUTPUT_RESOURCE
-		{	
-			ResourceName = Organics
-			Ratio = 0.0002
-			DumpExcess = false
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-	}
-
-	RESOURCE
-	{
-		name = Organics
-		amount = 100
-		maxAmount = 100
-	}
-
-	RESOURCE
-	{
-		name = Substrate
-		amount = 100
-		maxAmount = 100
 	}
 
 }
