--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
@@ -36,7 +36,7 @@ PART
 	node_stack_right2 = 2.08, 0.0, -6.704, 1, 0, 0, 2
 
 	// --- editor parameters ---
-	TechRequired = advMetalworks
+	TechRequired = specializedConstruction
 	entryCost = 24000
 	cost = 15000
 	category = Utility
