--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/DocSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/DocSciLab.cfg
@@ -5,15 +5,15 @@ PATH_SCIENCE
 	title = Commercial Science Lab
 	shortName = Science Lab
 	templateType = CommercialLab
-	description = More than just a fancy janitor's closet for cleaning used experiments, the Doc Commercial Science Lab, jointly developed with the Rasta Engineering Group, is designed for long-term scientific research. Just drop an experiment into the lab, start researching it, and collect the data. Be sure to periodically check back to see how much data you've accumulated. And unlike some labs, the Doc lets you publish your research to gain the respect of your peers, and sell the data on the open market in addition to transmitting the data back to KSC for science.
+	description = More than just a fancy janitor's closet for cleaning used experiments, the Commercial Science Lab (CSL), jointly developed with the Rasta Engineering Group, is designed for long-term scientific research. Just drop an experiment into the lab, start researching it, and collect the data. Be sure to periodically check back to see how much data you've accumulated. And unlike some labs, the CSL lets you publish your research to gain the respect of your peers, and sell the data on the open market in addition to transmitting the data back to KSC for science.
 	mass = 3
 	requiredResource = Equipment
 	requiredAmount = 1200
 	reconfigureSkill = Scientist
 	logoPanel = WildBlueIndustries/Pathfinder/Decals/DocSci
 	glowPanel = WildBlueIndustries/Pathfinder/Decals/DocSciGlow
-	toolTip = Why should Science be the only reward for your effort? With the Doc Science Lab, you can: Transmit the research data home for Science, Publish it to increase your standing in the community and earn Reputation, or Sell it for Funds.
-	toolTipTitle = Your First Doc Lab!
+	toolTip = Why should Science be the only reward for your effort? With the Commercial Science Lab, you can: Transmit the research data home for Science, Publish it to increase your standing in the community and earn Reputation, or Sell it for Funds.
+	toolTipTitle = Your First Commercial Lab!
 	enableMPLModules = true
 
 	MODULE
