--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Kerbalism.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Kerbalism.cfg
@@ -335,7 +335,7 @@ RESOURCE_DEFINITION
 			Ratio = 6
 		}
 
-		INPUT_RESOURCE
+		OUTPUT_RESOURCE
 		{
 			ResourceName = Oxygen
 			Ratio = 0.0000001
@@ -370,6 +370,92 @@ RESOURCE_DEFINITION
 		name = Food
 		amount = 100
 		maxAmount = 100
+	}
+
+	RESOURCE
+	{
+		name = Oxygen
+		amount = 10000
+		maxAmount = 10000
+	}
+}
+
+@PATH_INDUSTRY[CropWorks]:NEEDS[Kerbalism]
+{
+	MODULE
+	{
+		name = WBIGreenhouse
+		ConverterName = Greenhouse
+		StartActionName = Start Grenhouse
+		StopActionName = Stop Greenhouse
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		Specialty = Scientist
+		EfficiencyBonus = 1
+		hoursPerCycle = 540 //Number of hours to grow crops
+		minimumSuccess = 45
+		criticalSuccess = 90
+		criticalFail = 20
+		cropResource = Food
+		cropYield = 2500
+		criticalSuccessBonus = 0.25
+		failureLoss = 0.5
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Water
+			Ratio = 0.0004
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Fertilizer
+			Ratio = 0.00004
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 12
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Oxygen
+			Ratio = 0.0000002
+		}
+
+		REQUIRED_RESOURCE
+		{
+			ResourceName = Fertilizer
+			Ratio = 250
+		}
+
+	}
+
+	RESOURCE
+	{
+		name = Fertilizer
+		amount = 700
+		maxAmount = 700
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Water
+		amount = 700
+		maxAmount = 700
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Food
+		amount = 1000
+		maxAmount = 1000
 	}
 
 	RESOURCE
