--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Snacks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Snacks.cfg
@@ -133,6 +133,71 @@
 
 }
 
+@PATH_INDUSTRY[CropWorks]:NEEDS[Snacks]
+{
+	MODULE
+	{
+		name = WBIGreenhouse
+		ConverterName = Greenhouse
+		StartActionName = Start Grenhouse
+		StopActionName = Stop Greenhouse
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		Specialty = Scientist
+		EfficiencyBonus = 1
+		hoursPerCycle = 540 //Number of hours to grow crops
+		minimumSuccess = 45
+		criticalSuccess = 90
+		criticalFail = 20
+		cropResource = Snacks
+		cropYield = 843.75 //You'll have enough to feed 3 kerbals for 90 days
+		criticalSuccessBonus = 0.25
+		failureLoss = 0.5
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Water
+			Ratio = 0.0004
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Fertilizer
+			Ratio = 0.00004
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 12
+		}
+
+		REQUIRED_RESOURCE
+		{
+			ResourceName = Fertilizer
+			Ratio = 250
+		}
+	}
+
+	RESOURCE
+	{
+		name = Fertilizer
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Water
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+}
+
 @PATH_SCIENCE[Watney]:NEEDS[Snacks]
 {
 	MODULE
