--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_USILS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_USILS.cfg
@@ -147,6 +147,94 @@
 
 }
 
+@PATH_INDUSTRY[CropWorks]:NEEDS[USILifeSupport]
+{
+	MODULE
+	{
+		name = WBIGreenhouse
+		ConverterName = Greenhouse
+		StartActionName = Start Grenhouse
+		StopActionName = Stop Greenhouse
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		Specialty = Scientist
+		EfficiencyBonus = 1
+		hoursPerCycle = 540 //Number of hours to grow crops
+		minimumSuccess = 45
+		criticalSuccess = 90
+		criticalFail = 20
+		cropResource = Supplies
+		cropYield = 13668.75 //You'll have enough to feed 3 kerbals for 90 days, 16.2 Supplies per day.
+		criticalSuccessBonus = 0.25
+		failureLoss = 0.5
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Water
+			Ratio = 0.0004
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Fertilizer
+			Ratio = 0.0004
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 12
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Mulch
+			Ratio = 0.00002
+		}
+
+		REQUIRED_RESOURCE
+		{
+			ResourceName = Mulch
+			Ratio = 250
+		}
+
+	}
+
+	RESOURCE
+	{
+		name = Mulch
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Water
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Fertilizer
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Supplies
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+}
+
 @PART[WBI_Outback]:NEEDS[USILifeSupport]
 {
 	@MODULE[WBIOutback]
