--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Command/Ponderosa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Command/Ponderosa.cfg
@@ -228,6 +228,12 @@ opsViewTitle = Ponderosa Operations
 
 	MODULE
 	{
+		name = WBIEfficiencyMonitor
+		efficiencyType = science
+	}
+
+	MODULE
+	{
 		name = FlagDecal
 		textureQuadName = flagTransform
 	}
