--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Experimental/Tipi.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Experimental/Tipi.cfg
@@ -67,6 +67,11 @@ PART
 
 	MODULE
 	{
+		name = WBIPartPrinter
+	}
+
+	MODULE
+	{
 		name = ModuleScienceContainer
 		reviewActionName = Review Data
 		storeActionName = Store Experiments
@@ -82,11 +87,6 @@ PART
 		minimumCrew = 0
 	}
 
-	MODULE
-	{
-		name = WBIPartPrinter
-	}
-
 	MODULE:NEEDS[Workshop] 
 	{
 		name = OseModuleWorkshop
@@ -95,7 +95,6 @@ PART
 		UpkeepResource = ElectricCharge // This resource will be consumed 1 per second during processing
 		InputResource = MaterialKits // This resource will be used to process the items
 		MinimumCrew = 2 // Amount of Kerbals needed for the Workshop to work
-		MaxPartVolume = 1200
 	}
 
 	MODULE:NEEDS[Workshop]
@@ -106,6 +105,62 @@ PART
 		UpkeepResource = ElectricCharge // This resource will be consumed 1 per second during processing
 		OutputResource = MaterialKits // This resource will be created 
 		MinimumCrew = 2 // Amount of Kerbals needed for the Recycler to work
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = Pods
+		IconPath = Squad/PartList/SimpleIcons/RDicon_commandmodules
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = FuelTank
+		IconPath = Squad/PartList/SimpleIcons/RDicon_fuelSystems-advanced
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = Engine
+		IconPath = Squad/PartList/SimpleIcons/RDicon_propulsionSystems
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = Control
+		IconPath = Squad/PartList/SimpleIcons/R&D_node_icon_largecontrol
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = Structural
+		IconPath = Squad/PartList/SimpleIcons/R&D_node_icon_generalconstruction
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = Aero
+		IconPath = Squad/PartList/SimpleIcons/R&D_node_icon_advaerodynamics
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = Utility
+		IconPath = Squad/PartList/SimpleIcons/R&D_node_icon_generic
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = Science
+		IconPath = Squad/PartList/SimpleIcons/R&D_node_icon_advsciencetech
 	}
 
 	MODULE
@@ -122,15 +177,6 @@ PART
 		runSpeed = 0.8
 	}
 
-//	MODULE
-//	{
-//		name = WBILight
-//		animationName = Ponderosa2Lights
-//		startEventGUIName = Lights On
-//		endEventGUIName = Lights Off
-//		ecRequired = 0.04
-//	}
-
 	MODULE
 	{
 		name = WBIMultipurposeHab
@@ -138,9 +184,6 @@ PART
 
 		//Determines whether or not to show the context menu GUI
 		showGUI = True
-
-		//Determines whether or not the part is inflatable
-		isInflatable = false
 
 		//Some containers don't hold as much resources as the template specifies, while others hold more.
 		//Since the resource templates specify base amounts, the capacity factor specifies a multiplier to
@@ -155,6 +198,7 @@ PART
 
 		//name of the template nodes to use
 		templateNodes = PATH_HABITATION
+		resourcesToKeep = Snacks;Food;Oxygen;Water;CarbonDioxide;Waste;WasteWater;PlasmaShielding;Supplies;Mulch;ReplacementParts
 
 		//Short name of the default module template.
 		//This is used when selecting the part in the editor.
@@ -195,6 +239,59 @@ opsViewTitle = Ponderosa Operations
 		defaultMoveSndPath = KIS/Sounds/itemMove
 	}
 
+	//Seat inventories are added manually.
+	MODULE
+	{
+		name = ModuleKISInventory
+		maxVolume = 0.001
+		slotsX = 2
+		slotsY = 4
+		slotSize = 50
+		itemIconResolution = 128
+		selfIconResolution = 128
+		openSndPath = KIS/Sounds/inventoryOpen
+		closeSndPath = KIS/Sounds/inventoryClose
+	}
+
+	MODULE
+	{
+		name = ModuleKISInventory
+		maxVolume = 0.001
+		slotsX = 2
+		slotsY = 4
+		slotSize = 50
+		itemIconResolution = 128
+		selfIconResolution = 128
+		openSndPath = KIS/Sounds/inventoryOpen
+		closeSndPath = KIS/Sounds/inventoryClose
+	}
+
+	MODULE
+	{
+		name = ModuleKISInventory
+		maxVolume = 0.001
+		slotsX = 2
+		slotsY = 4
+		slotSize = 50
+		itemIconResolution = 128
+		selfIconResolution = 128
+		openSndPath = KIS/Sounds/inventoryOpen
+		closeSndPath = KIS/Sounds/inventoryClose
+	}
+
+	MODULE
+	{
+		name = ModuleKISInventory
+		maxVolume = 0.001
+		slotsX = 2
+		slotsY = 4
+		slotSize = 50
+		itemIconResolution = 128
+		selfIconResolution = 128
+		openSndPath = KIS/Sounds/inventoryOpen
+		closeSndPath = KIS/Sounds/inventoryClose
+	}
+
 	MODULE
 	{
 		name = FlagDecal
@@ -221,13 +318,5 @@ opsViewTitle = Ponderosa Operations
 		amount = 200
 		maxAmount = 200
 		isTweakable = false
-	}
-}
-
-@PART[WBI_Ponderosa]:NEEDS[Impact]
-{
-	MODULE
-	{
-		name = Seismometer
 	}
 }
