--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
@@ -42,7 +42,7 @@ PART
 	subcategory = 0
 	title = Doc Science Lab
 	manufacturer = Wild Blue Industries
-	description = The Doc Science Lab does for laboratories what the Ponderosa does for habitats. You can reconfigure the Doc to perform different scientific functions such as the Doc Commercial Science Lab and the Watnet Chemistry Lab. Innovative kerbals might provide additional configurations in the future.The Doc is well suited for research on the ground, but it isn't as effective in orbit.
+	description = The Doc Inflatable Multipurpose Science Lab (IMSL) does for laboratories what the Ponderosa does for habitats. You can reconfigure the Doc to perform different scientific functions such as the Doc Commercial Science Lab and the Watnet Chemistry Lab. Innovative kerbals might provide additional configurations in the future. The Doc is well suited for research on the ground, but it isn't as effective in orbit.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,0,1,1
@@ -238,6 +238,12 @@ PART
 		equipPos = (0,0.45,0)
 		equipDir = (0,0,0)
 		runSpeed = 0.8
+	}
+
+	MODULE
+	{
+		name = WBIEfficiencyMonitor
+		efficiencyType = science
 	}
 
 	MODULE
