--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
@@ -201,7 +201,7 @@ PART
 
 		//name of the template nodes to use
 		templateNodes = PATH_HABITATION
-SSSS		resourcesToKeep = Snacks;Food;Oxygen;Water;CarbonDioxide;Waste;WasteWater;PlasmaShielding;Supplies;Mulch;ReplacementParts
+		resourcesToKeep = Snacks;Food;Oxygen;Water;CarbonDioxide;Waste;WasteWater;PlasmaShielding;Supplies;Mulch;ReplacementParts
 
 		//Short name of the default module template.
 		//This is used when selecting the part in the editor.
@@ -224,6 +224,12 @@ opsViewTitle = Ponderosa Operations
 	MODULE
 	{
 		name = WBIResourceDistributor
+	}
+
+	MODULE
+	{
+		name = WBIEfficiencyMonitor
+		efficiencyType = habitation
 	}
 
 	MODULE
