--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
@@ -150,6 +150,7 @@ PART
 	MODULE
 	{
 		name = WBIExtractionMonitor
+		efficiencyType = industry
 	}
 
 	MODULE 
@@ -295,6 +296,17 @@ PART
 	MODULE
 	{
 		name = WBIResourceDistributor
+	}
+
+	MODULE
+	{
+		name = WBIExtractionMonitor
+	}
+
+	MODULE
+	{
+		name = WBIEfficiencyMonitor
+		efficiencyType = industry
 	}
 
 	MODULE
