--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
@@ -60,7 +60,7 @@ PART
 
 	INTERNAL
 	{
-		  name = mk1PodCockpit
+		  name = WBI_SpyglassSpace
 	}
 
 	MODULE
@@ -145,5 +145,18 @@ PART
 		evaStrutPos = (0.05, 0.059, -0.21)
 		evaStrutRot = (190.0, 0.0, 0.0)
 		tubeTexPath = KAS/Textures/pipe
+	}
+
+	MODULE
+	{
+		//This module is used to change the screens of any monitor props in your IVA. The prop needs to have an InternalScreenSwitcher.
+		name = WBIScreenPropHelper
+
+		//Number of seconds to wait before changing the screens
+		//Set to 0 to keep the images static.
+		screenChangeSeconds = 30.0
+
+		//Separate your paths with a semicolon. Don't forget to add a "/" at the end of your path!
+		screenImagePaths = WildBlueIndustries/Pathfinder/Spaces/Screens/
 	}
 }
