--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Nukeworks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Nukeworks.cfg
@@ -2,7 +2,7 @@ PATH_INDUSTRY
 {
 	author = Angel-125
 	name = Nukeworks
-	title = Nukeworks Power Plant
+	title = Nukeworks Nuclear Reprocessor
 	shortName = Nukeworks
 	TechRequired = fieldScience
 	description = The Nukeworks is dedicated to processing raw Uranite into EnrichedUranium, and for reprocessing DepletedUranium into EnrichedUranium. It also gives you that healthy glow.
@@ -15,42 +15,6 @@ PATH_INDUSTRY
 	glowPanel = WildBlueIndustries/Pathfinder/Decals/SolarFlareGlow
 	toolTip = Need to create or reprocess nuclear fuel? Nuke 'em!
 	toolTipTitle = Your First Nukeworks
-
-	MODULE
-	{
-		name = ModuleResourceConverter
-		ConverterName = Reactor
-		StartActionName = Start Reactor
-		StopActionName = Stop Reactor
-		AutoShutdown = false
-		GeneratesHeat = false
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		Specialty = Engineer
-		EfficiencyBonus = 1
-
-		INPUT_RESOURCE
-		{
-			ResourceName = EnrichedUranium
-			Ratio = 0.0000006
-			FlowMode = NO_FLOW
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = DepletedUranium
-			Ratio = 0.0000005
-			DumpExcess = false
-			FlowMode = NO_FLOW
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 100
-		}
-	}
 
 	MODULE
 	{
