--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_TACLS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_TACLS.cfg
@@ -245,3 +245,121 @@
 		isTweakable = true
 	}
 }
+
+@PATH_INDUSTRY[CropWorks]:NEEDS[TacLifeSupport]
+{
+	MODULE
+	{
+		name = WBIGreenhouse
+		ConverterName = Greenhouse
+		StartActionName = Start Grenhouse
+		StopActionName = Stop Greenhouse
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		SpecialistEfficiencyFactor = 0.2
+		Specialty = Scientist
+		EfficiencyBonus = 1
+		hoursPerCycle = 540 //Number of hours to grow crops
+		minimumSuccess = 45
+		criticalSuccess = 90
+		criticalFail = 20
+		cropResource = Food
+		cropYield = 437.5 //You'll have enough to feed 3 kerbals for 90 days
+		criticalSuccessBonus = 0.25
+		failureLoss = 0.5
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 12
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = CarbonDioxide
+			Ratio = 0.00028
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Water
+			Ratio = 0.00000714
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Fertilizer
+			Ratio = 0.000002
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = WasteWater
+			Ratio = 0.000002
+			DumpExcess = true
+		}
+
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Oxygen
+			Ratio = 0.000230
+			DumpExcess = true
+		}
+
+		REQUIRED_RESOURCE
+		{
+			ResourceName = Fertilizer
+			Ratio = 250
+		}
+
+	}
+
+	RESOURCE
+	{
+		name = Oxygen
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = CarbonDioxide
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Water
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = WasteWater
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Food
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = Fertilizer
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = true
+	}
+}
