--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
@@ -49,11 +49,6 @@ PART
 		ImpactTransform = ImpactTransform
 		ImpactRange = 5
 		AutoShutdown = true
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		Specialty = Engineer
-		EfficiencyBonus = 1
 		GeneratesHeat = true
 		INPUT_RESOURCE
 		{
@@ -71,7 +66,7 @@ PART
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
-		Specialty = Engineer
+		Specialty = Scientist
 		EfficiencyBonus = 1
 		ThermalEfficiency 
 		{
