--- a/GameData/WildBlueIndustries/Buffalo/Parts/JetWing/JumpChute.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/JetWing/JumpChute.cfg
@@ -16,7 +16,7 @@ PART
 	TechRequired = start
 	entryCost = 300
 	cost = 450
-	category = FuelTank
+	category = Utility
 	subcategory = 0
 	title = JetWing Parachute
 	manufacturer = Wild Blue Industries
