--- a/GameData/WildBlueIndustries/Pathfinder/Plugins/PluginData/Pathfinder/Settings.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Plugins/PluginData/Pathfinder/Settings.cfg
@@ -1,7 +1,7 @@
 payToRemodel = False
 requireSkillCheck = False
 repairsRequireResources = False
-partsCanBreak; = True
+partsCanBreak; = False
 drillTechNode = specializedConstruction
 playModePath = 
 playModeName = Default
