--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_KPBS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_KPBS.cfg
@@ -7,7 +7,7 @@
 
 	MODULE
 	{
-		name = WBIResourceSwitcher
+		name = WBIConvertibleStorage
 		enableLogging = True
 
 		//Determines if the module allows in-field reconfiguring
@@ -32,6 +32,11 @@
 		//factor into the resource amounts.
 		capacityFactor = 0.111111
 	}
+
+	MODULE
+	{
+		name = WBIResourceDistributor
+	}
 }
 
 @PART[KKAOSS_Rocket_Fuel_Tank]:FOR[Pathfinder]:NEEDS[PlanetarySurfaceStructures]
@@ -43,7 +48,7 @@
 
 	MODULE
 	{
-		name = WBIResourceSwitcher
+		name = WBIConvertibleStorage
 		enableLogging = True
 
 		//Determines if the module allows in-field reconfiguring
@@ -67,6 +72,11 @@
 		//Since the resource templates specify base amounts, the capacity factor specifies a multiplier to
 		//factor into the resource amounts.
 		capacityFactor = 0.222222
+	}
+
+	MODULE
+	{
+		name = WBIResourceDistributor
 	}
 }
 
@@ -134,6 +144,11 @@
 		opsViewTitle = K&K Lab Operations
 	}
 
+	MODULE
+	{
+		name = WBIResourceDistributor
+	}
+
 	RESOURCE
 	{
 		name = ResearchKits
@@ -191,6 +206,11 @@
 		partToolTip = Want to use the MK2 K&K Habitat for more than one purpose? With a feat of engineering, you can change it in the field. For a price... The cornerstone of your habitation needs, resources created in one of the module's many configurations will benefit from soil analysis.
 		opsViewTitle = K&K Hab Operations
 	}
+
+	MODULE
+	{
+		name = WBIResourceDistributor
+	}
 }
 
 @PART[KKAOSS_Greenhouse_g]:FOR[Pathfinder]:NEEDS[PlanetarySurfaceStructures,Snacks]
@@ -227,7 +247,7 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = Fertilizer
-			Ratio = 0.0002
+			Ratio = 0.00002
 		}
 
 		INPUT_RESOURCE
@@ -236,18 +256,16 @@
 			Ratio = 6
 		}
 
-		INPUT_RESOURCE
-		{
-			ResourceName = Dirt
-			Ratio = 0.00001
-		}
-
 		REQUIRED_RESOURCE
 		{
-			ResourceName = Dirt
-			Ratio = 400
+			ResourceName = Fertilizer
+			Ratio = 100
 		}
+	}
 
+	MODULE
+	{
+		name = WBIResourceDistributor
 	}
 
 	RESOURCE
@@ -261,14 +279,6 @@
 	RESOURCE
 	{
 		name = Water
-		amount = 350
-		maxAmount = 350
-		isTweakable = true
-	}
-
-	RESOURCE
-	{
-		name = Dirt
 		amount = 350
 		maxAmount = 350
 		isTweakable = true
@@ -340,8 +350,8 @@
 
 		REQUIRED_RESOURCE
 		{
-			ResourceName = Dirt
-			Ratio = 705
+			ResourceName = Fertilizer
+			Ratio = 100
 		}
 
 	}
@@ -381,14 +391,6 @@
 	RESOURCE
 	{
 		name = Food
-		amount = 500
-		maxAmount = 500
-		isTweakable = true
-	}
-
-	RESOURCE
-	{
-		name = Dirt
 		amount = 500
 		maxAmount = 500
 		isTweakable = true
@@ -448,24 +450,16 @@
 
 		INPUT_RESOURCE
 		{
-			ResourceName = Dirt
+			ResourceName = Mulch
 			Ratio = 0.00001
 		}
 
 		REQUIRED_RESOURCE
 		{
-			ResourceName = Dirt
-			Ratio = 400
+			ResourceName = Mulch
+			Ratio = 100
 		}
 
-	}
-
-	RESOURCE
-	{
-		name = Dirt
-		amount = 500
-		maxAmount = 500
-		isTweakable = true
 	}
 
 	RESOURCE
