--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
@@ -49,11 +49,11 @@ PART
 	attachRules = 1,1,0,1,1
 
 	// --- standard part parameters ---
-	mass = 0.5
+	mass = 0.25
 	dragModelType = default
 	maximum_drag = 0.25
 	minimum_drag = 0.25
-	angularDrag = .5
+	angularDrag = .25
 	crashTolerance = 45
 	breakingForce = 2800
 	breakingTorque = 2800
@@ -296,6 +296,7 @@ PART
 	MODULE
 	{
 		name = WBIResourceDistributor
+		resourceBlacklist = ReplacementParts;GeoEnergy
 	}
 
 	MODULE
