--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/GeologyLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/GeologyLab.cfg
@@ -9,7 +9,7 @@ PATH_HABITATION
 	requiredResource = Equipment
 	requiredAmount = 600
 	reconfigureSkill = Engineer
-	templateTags = orbitalWorkshop
+	templateTags = orbitalWorkshop;moleHab
 	logoPanel = WildBlueIndustries/Pathfinder/Decals/Pathfinder
 	glowPanel = WildBlueIndustries/Pathfinder/Decals/PathfinderGlow
 	toolTip = You might want to staff your Geology Labs with scientists to make a lasting impact on geoscience. Or profit from it... Just be sure you choose the right scientists for the job...
@@ -120,7 +120,7 @@ PATH_HABITATION
 
 	RESOURCE
 	{
-		name = Dirt
+		name = Ore
 		amount = 500
 		maxAmount = 500
 	}
