--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback2.cfg
@@ -10,10 +10,11 @@ PART
 	}
 	rescaleFactor = 1
 	node_stack_mount = 0, 0, 0, 0, -1, 0, 3
-	node_stack_right = 0.7747217, 0.5061848, 0, 1, 0, 0, 2
-	node_stack_left = -0.7747217, 0.5061848, 0, -1, 0, 0, 2
-	node_stack_back = 0, 0.5061848, 0.7747217, 0, 0, 1, 2
-	node_stack_front = 0, 0.5061848, -0.7747217, 0, 0, -1, 2
+	node_stack_top = 0, 1.309342, 0, 0, 1, 0, 2
+	node_stack_right = 0.5740595, 0.7747217, 0, 1, 0, 0, 2
+	node_stack_left = -0.5740595, 0.7747217, 0, -1, 0, 0, 2
+	node_stack_back = 0, 0.7747217, 0.5740595, 0, 0, 1, 2
+	node_stack_front = 0, 0.7747217, -0.5740595, 0, 0, -1, 2
 	node_attach = 0, 0, 0, 0, -1, 0, 2
 
 	TechRequired = generalConstruction
