--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
@@ -224,6 +224,7 @@ opsViewTitle = Ponderosa Operations
 	MODULE
 	{
 		name = WBIResourceDistributor
+		resourceBlacklist = ReplacementParts
 	}
 
 	MODULE
