--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Pigpen.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/Pigpen.cfg
@@ -9,7 +9,7 @@ PATH_HABITATION
 	requiredResource = Equipment
 	requiredAmount = 600
 	reconfigureSkill = Engineer
-	templateTags = orbitalWorkshop
+	templateTags = orbitalWorkshop;moleHab
 	logoPanel = WildBlueIndustries/Pathfinder/Decals/Pigpen
 	glowPanel = WildBlueIndustries/Pathfinder/Decals/PigpenGlow
 	toolTip = Closed loop life support is never 100% but modules like the Pigpen help close the loop. Keep it fed with waste and power, and get usable resources in return. The exact resources depends upon which life support manufacturer you go with.
