--- a/GameData/WildBlueIndustries/Buffalo/Parts/Wheel/M1A1OmniWheel.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Wheel/M1A1OmniWheel.cfg
@@ -12,7 +12,7 @@ PART
 	node_attach = -0.025, 0.02, 0.00, 1.0, 0.0, 0.0, 1
 	node_stack_front = -0.025, 0.02, 0.00, 1.0, 0.0, 0.0, 1
 
-	TechRequired = advExploration
+	TechRequired = spaceExploration
 	entryCost = 7200
 	cost = 750
 	category = Utility
