--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_EL.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_EL.cfg
@@ -1,4 +1,4 @@
-//Converters and resources for Extraplanetary Launchpads
+//Converters and resources for Extraplanetary ExtraplanetaryLaunchpadss
 @STORAGE_TEMPLATE[MetallicOre]:NEEDS[ExtraplanetaryLaunchpads]
 {
   @shortName = MetalOre
