--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Homestead.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Homestead.cfg
@@ -244,3 +244,9 @@ opsViewTitle = Homestead Operations
 	}
 
 }
+
+//PART[WBI_Homestead]:FOR[Pathfinder]:NEEDS[MOLE]
+//{
+//	@TechRequired = Unresearcheable
+//	@category = none
+//}
