--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
@@ -87,17 +87,9 @@ PART
 	{
 		name = ModuleResourceConverter
 		ConverterName = Spotlight
-		StartActionName = Start Spotlight
-		StopActionName = Stop Spotlight	 
+		AlwaysActive = true
 		AutoShutdown = false
 		GeneratesHeat = false
-
-		 
-		 INPUT_RESOURCE
-		 {
-			ResourceName = ElectricCharge
-			Ratio = 0.04
-		 }
 	}
 
 	MODULE
@@ -105,6 +97,8 @@ PART
 		name = ModuleAnimationGroup
 		deployAnimationName = Deploy
 		activeAnimationName = RotateLight
+		deployActionName = Start Rotating
+		retractActionName = Stop Rotating
 		moduleType = Spotlight
 	}
 
@@ -119,6 +113,7 @@ PART
 		green = 1
 		blue = 1
 		intensity = 3
+		ecRequired = 0.04
 	}
 
 	MODULE
