--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Stockyard250.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Stockyard250.cfg
@@ -1,4 +1,4 @@
-PART
+PART:NEEDS[Launchpad]
 {
 // this is a sample config file, for determining a good file format for defining part parameters
 // comment line - ignored by cfg parser
@@ -114,4 +114,10 @@ PART
 		passable = true
 	}
 
+}
+
+@PART[WBI_Stockyard250]:FOR[Pathfinder]:NEEDS[MOLE]:FINAL
+{
+	@TechRequired = Unresearcheable
+	@category = none
 }
