--- a/GameData/WildBlueIndustries/Buffalo/ModuleManagerPatches/MM_Pathfinder.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/ModuleManagerPatches/MM_Pathfinder.cfg
@@ -7,7 +7,7 @@
 
 	MODULE
 	{
-		name = WBIStorageDistributor
+		name = WBIResourceDistributor
 	}
 }
 
@@ -20,7 +20,7 @@
 
 	MODULE
 	{
-		name = WBIStorageDistributor
+		name = WBIResourceDistributor
 	}
 }
 
@@ -33,6 +33,6 @@
 
 	MODULE
 	{
-		name = WBIStorageDistributor
+		name = WBIResourceDistributor
 	}
 }
