--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_WBT.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_WBT.cfg
@@ -4,6 +4,11 @@
 	{
 		@templateNodes = BATTERY;STORAGE_TEMPLATE
 	}
+
+	MODULE:NEEDS[Pathfinder]
+	{
+		name = WBIResourceDistributor
+	}
 }
 
 @PART[WBI_Buckboard2]:NEEDS[Pathfinder]
@@ -12,6 +17,11 @@
 	{
 		@templateNodes = BUCKBOARD_GENERATOR2;STORAGE_TEMPLATE
 	}
+
+	MODULE:NEEDS[Pathfinder]
+	{
+		name = WBIResourceDistributor
+	}
 }
 
 @PART[WBI_Buckboard3]:NEEDS[Pathfinder]
@@ -19,6 +29,11 @@
 	@MODULE[WBIConvertibleStorage]
 	{
 		@templateNodes = BUCKBOARD_GENERATOR3;STORAGE_TEMPLATE
+	}
+
+	MODULE:NEEDS[Pathfinder]
+	{
+		name = WBIResourceDistributor
 	}
 }
 
