--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Command/Ponderosa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Command/Ponderosa.cfg
@@ -35,9 +35,11 @@ PART
 	minimum_drag = 0.2
 	angularDrag = 2
 	crashTolerance = 15
-	maxTemp = 2000
-	breakingForce = 50
-	breakingTorque = 50
+	maxTemp = 1000
+	skinMaxTemp = 2000
+	emissiveConstant = 0.5
+	breakingForce = 500
+	breakingTorque = 500
 	bulkheadProfiles = size1, srf
 	vesselType = Base
 	CrewCapacity = 0
