--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
@@ -35,7 +35,9 @@ PART
 	minimum_drag = 0.2
 	angularDrag = 2
 	crashTolerance = 15
-	maxTemp = 900
+	maxTemp = 1000
+	skinMaxTemp = 2000
+	emissiveConstant = 0.5
 	breakingForce = 5000
 	breakingTorque = 5000
 	bulkheadProfiles = size1, srf
