--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Conestoga.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Conestoga.cfg
@@ -74,7 +74,9 @@ PART
 	crashTolerance = 55
 	breakingForce = 280
 	breakingTorque = 280
-	maxTemp = 2000
+	maxTemp = 1000
+	skinMaxTemp = 2000
+	emissiveConstant = 0.5
 	CoMOffset = 0,-0.6,0
 	CrewCapacity = 0
 //	stackSymmetry = 3
