--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Homestead.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Homestead.cfg
@@ -52,7 +52,9 @@ PART
 	crashTolerance = 45
 	breakingForce = 5000
 	breakingTorque = 5000
-	maxTemp = 1500
+	maxTemp = 1000
+	skinMaxTemp = 2000
+	emissiveConstant = 0.5
 	CrewCapacity = 0
 	vesselType = Station
 
