--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Mineshaft.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Mineshaft.cfg
@@ -53,7 +53,9 @@ PART
 	crashTolerance = 45
 	breakingForce = 2800
 	breakingTorque = 2800
-	maxTemp = 900
+	maxTemp = 1000
+	skinMaxTemp = 2000
+	emissiveConstant = 0.5
 	CrewCapacity = 0
 	fuelCrossFeed = True
 	bulkheadProfiles = size1, srf
