--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/SmokePipe.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/SmokePipe.cfg
@@ -54,10 +54,11 @@ PART
 	breakingForce = 2800
 	breakingTorque = 2800
 	maxTemp = 900
-	CrewCapacity = 0
+	maxTemp = 1000
+	skinMaxTemp = 2000
 	vesselType = Base
 	fuelCrossFeed = True
-	emissiveConstant = 0.90
+	emissiveConstant = 0.97
 	heatConductivity = 0.001 //They have built in insulators	
 	skinInternalConductionMult = 2000
 	radiatorHeadroom = 0.75
