--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
@@ -56,7 +56,9 @@ PART
 	crashTolerance = 45
 	breakingForce = 2800
 	breakingTorque = 2800
-	maxTemp = 900
+	maxTemp = 1000
+	skinMaxTemp = 2000
+	emissiveConstant = 0.5
 	CrewCapacity = 0
 	vesselType = Base
 	fuelCrossFeed = True
