--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
@@ -32,10 +32,10 @@ PART
 	crashTolerance = 7
 	maxTemp = 2000
 
-	MODULE
-	{
-		name = ModuleOverheatDisplay
-	}
+//	MODULE
+//	{
+//		name = ModuleOverheatDisplay
+//	}
 
 	MODULE
 	{
@@ -49,7 +49,7 @@ PART
 		ImpactTransform = ImpactTransform
 		ImpactRange = 5
 		AutoShutdown = true
-		GeneratesHeat = true
+		GeneratesHeat = false
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
@@ -90,7 +90,7 @@ PART
 		ImpactTransform = ImpactTransform
 		UseSpecialistBonus = true
 		AutoShutdown = true
-		GeneratesHeat = true
+		GeneratesHeat = false
 		TemperatureModifier
 		{
 			key = 0 10000
@@ -130,23 +130,23 @@ PART
 		moduleType = Drill
 	}	
 	
-	MODULE
-	{
-		name = ModuleCoreHeat
-		CoreTempGoal = 500					//Internal temp goal - we don't transfer till we hit this point
-		CoreToPartRatio = 0.1				//Scale back cooling if the part is this % of core temp
-		CoreTempGoalAdjustment = 0			//Dynamic goal adjustment
-		CoreEnergyMultiplier = 0.1			//What percentage of our core energy do we transfer to the part
-		HeatRadiantMultiplier = 0.25		//If the core is hotter, how much heat radiates?
-		CoolingRadiantMultiplier = 0		//If the core is colder, how much radiates?
-		HeatTransferMultiplier = 0			//If the part is hotter, how much heat transfers in?
-		CoolantTransferMultiplier = 0.01	//If the part is colder, how much of our energy can we transfer?
-		radiatorCoolingFactor = 1			//How much energy we pull from core with an active radiator?>= 1
-		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
-		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
-		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 50					//Maximum amount of radiator capacity we can consume - 50 = 1 small
-	}
+//	MODULE
+//	{
+//		name = ModuleCoreHeat
+//		CoreTempGoal = 500					//Internal temp goal - we don't transfer till we hit this point
+//		CoreToPartRatio = 0.1				//Scale back cooling if the part is this % of core temp
+//		CoreTempGoalAdjustment = 0			//Dynamic goal adjustment
+//		CoreEnergyMultiplier = 0.1			//What percentage of our core energy do we transfer to the part
+//		HeatRadiantMultiplier = 0.25		//If the core is hotter, how much heat radiates?
+//		CoolingRadiantMultiplier = 0		//If the core is colder, how much radiates?
+//		HeatTransferMultiplier = 0			//If the part is hotter, how much heat transfers in?
+//		CoolantTransferMultiplier = 0.01	//If the part is colder, how much of our energy can we transfer?
+//		radiatorCoolingFactor = 1			//How much energy we pull from core with an active radiator?>= 1
+//		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
+//		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
+//		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
+//		MaxCoolant = 50					//Maximum amount of radiator capacity we can consume - 50 = 1 small
+//	}
 	MODULE
 	{
 		name = WBIModuleCoreSample
