--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
@@ -57,7 +57,9 @@ PART
 	crashTolerance = 45
 	breakingForce = 2800
 	breakingTorque = 2800
-	maxTemp = 1400
+	maxTemp = 1000
+	skinMaxTemp = 2000
+	emissiveConstant = 0.5
 	CrewCapacity = 0
 	vesselType = Base
 	fuelCrossFeed = True
@@ -89,7 +91,7 @@ PART
 		SpecialistBonusBase = 0.05
 		Specialty = Engineer
 		EfficiencyBonus = 1
-		GeneratesHeat = true
+		GeneratesHeat = false
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
@@ -121,23 +123,23 @@ PART
 		}		
 	}
 
-	MODULE
-	{
-		name = ModuleCoreHeat
-		CoreTempGoal = 500					//Internal temp goal - we don't transfer till we hit this point
-		CoreToPartRatio = 0.1				//Scale back cooling if the part is this % of core temp
-		CoreTempGoalAdjustment = 0			//Dynamic goal adjustment
-		CoreEnergyMultiplier = 0.1			//What percentage of our core energy do we transfer to the part
-		HeatRadiantMultiplier = 0.25		//If the core is hotter, how much heat radiates?
-		CoolingRadiantMultiplier = 0		//If the core is colder, how much radiates?
-		HeatTransferMultiplier = 0			//If the part is hotter, how much heat transfers in?
-		CoolantTransferMultiplier = 0.01	//If the part is colder, how much of our energy can we transfer?
-		radiatorCoolingFactor = 1			//How much energy we pull from core with an active radiator?>= 1
-		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
-		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
-		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
-		MaxCoolant = 100					//Maximum amount of radiator capacity we can consume - 50 = 1 small
-	}
+//	MODULE
+//	{
+//		name = ModuleCoreHeat
+//		CoreTempGoal = 500					//Internal temp goal - we don't transfer till we hit this point
+//		CoreToPartRatio = 0.1				//Scale back cooling if the part is this % of core temp
+//		CoreTempGoalAdjustment = 0			//Dynamic goal adjustment
+//		CoreEnergyMultiplier = 0.1			//What percentage of our core energy do we transfer to the part
+//		HeatRadiantMultiplier = 0.25		//If the core is hotter, how much heat radiates?
+//		CoolingRadiantMultiplier = 0		//If the core is colder, how much radiates?
+//		HeatTransferMultiplier = 0			//If the part is hotter, how much heat transfers in?
+//		CoolantTransferMultiplier = 0.01	//If the part is colder, how much of our energy can we transfer?
+//		radiatorCoolingFactor = 1			//How much energy we pull from core with an active radiator?>= 1
+//		radiatorHeatingFactor = 0.05		//How much energy we push to the active radiator
+//		MaxCalculationWarp = 1000			//Based on how dramatic the changes are, this is the max rate of change
+//		CoreShutdownTemp = 1000				//At what core temperature do we shut down all generators on this part?
+//		MaxCoolant = 100					//Maximum amount of radiator capacity we can consume - 50 = 1 small
+//	}
 
 	MODULE
 	{
