--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Mule.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Mule.cfg
@@ -51,7 +51,9 @@ PART
 	crashTolerance = 45
 	breakingForce = 280
 	breakingTorque = 280
-	maxTemp = 2000
+	maxTemp = 1000
+	skinMaxTemp = 2000
+	emissiveConstant = 0.5
 	CrewCapacity = 0
 	vesselType = Base
 
