Flex Fuel & M1-A1 improvements

--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/CrewCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/CrewCab.cfg
@@ -15,6 +15,7 @@ PART
 	node_stack_back = 0, -0.8458282, 0, 0, -1, 0, 1
 	node_stack_left = -1.035, 0.216, 0, -1, 0, 0, 1
 	node_stack_right = 1.035, 0.216, 0, 1, 0, 0, 1
+	node_stack_top = 0, 0.423, -0.626, 0, 0, -1, 1
 
 	TechRequired = advConstruction
 	entryCost = 6500
