--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/PowerPack.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/PowerPack.cfg
@@ -19,7 +19,7 @@ PART
 	subcategory = 0
 	title = Flex Fuel Power Pack
 	manufacturer = Wild Blue Industries
-	description = The Flex Fuel Power Pack can run off of different fuels, albeit with different efficiencies, with LiquidFuel/Oxidizer offering the best power generation. It even has a set of solar panels for auxilary power. To change the fuel type, be sure to go on EVA.
+	description = The Flex Fuel Power Pack can run off of different fuels, albeit with different efficiencies, with LiquidFuel/Oxidizer offering the best power generation. It even has a set of solar panels for auxilary power. To change the fuel type after launch, be sure to go on EVA.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,1,1,0
 
@@ -35,6 +35,23 @@ PART
 	breakingTorque = 50
 	bulkheadProfiles = size1, srf
 	CrewCapacity = 0
+
+	MODULE
+	{
+		name = ModuleResourceIntake
+		resourceName = IntakeAir
+		checkForOxygen = true
+		area = 0.001
+		intakeSpeed = 15
+		intakeTransformName = Intake
+		machCurve
+		{
+			key = 1 1 0 0
+			key = 1.5 0.9 -0.4312553 -0.4312553
+			key = 2.5 0.45 -0.5275364 -0.5275364
+			key = 3.5 0.1 0 0
+		}
+	}
 
 	MODULE
 	{
@@ -55,7 +72,7 @@ PART
 		StartActionName = Start Generator
 		StopActionName = Stop Generator
 		ToggleActionName = Toggle Generator
-		FillAmount = 0.95
+		FillAmount = 0.99
 		AutoShutdown = false
 		GeneratesHeat = false
 		UseSpecialistBonus = false
@@ -87,7 +104,7 @@ PART
 		StartActionName = Start Generator
 		StopActionName = Stop Generator
 		ToggleActionName = Toggle Generator
-		FillAmount = 0.95
+		FillAmount = 0.99
 		AutoShutdown = false
 		GeneratesHeat = false
 		UseSpecialistBonus = false
@@ -113,7 +130,7 @@ PART
 		StartActionName = Start Generator
 		StopActionName = Stop Generator
 		ToggleActionName = Toggle Generator
-		FillAmount = 0.95
+		FillAmount = 0.99
 		AutoShutdown = false
 		GeneratesHeat = false
 		UseSpecialistBonus = false
@@ -128,6 +145,38 @@ PART
 		{
 			ResourceName = ElectricCharge
 			Ratio = 6
+			DumpExcess = false
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleResourceConverter
+		ConverterName = LF+IntakeAir
+		StartActionName = Start Generator
+		StopActionName = Stop Generator
+		ToggleActionName = Toggle Generator
+		FillAmount = 0.99
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = false
+		 
+		INPUT_RESOURCE
+		{
+			ResourceName = LiquidFuel
+			Ratio = 0.02025
+			FlowMode = STAGE_PRIORITY_FLOW
+  		}
+		INPUT_RESOURCE
+		{
+			ResourceName = IntakeAir
+			Ratio = 0.02475
+			FlowMode = STAGE_PRIORITY_FLOW
+		}
+		OUTPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 18
 			DumpExcess = false
 		}
 	}
@@ -151,6 +200,21 @@ PART
 		amount = 30
 		maxAmount = 30
 		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = LiquidFuel
+		amount = 30
+		maxAmount = 30
+		isTweakable = true
+	}
+
+	RESOURCE
+	{
+		name = IntakeAir
+		amount = 0.5
+		maxAmount = 0.5
 	}
 
 	DRAG_CUBE
