--- a/GameData/WildBlueIndustries/Buffalo/Parts/Wheel/M1A1OmniWheel.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Wheel/M1A1OmniWheel.cfg
@@ -137,6 +137,19 @@ PART
 
 	MODULE
 	{
+		name = ModuleDecouple
+		ejectionForce = 150
+		explosiveNodeID = srf
+		stagingEnabled = false
+	}
+
+	MODULE
+	{
+		name = WBIDecoupleSwitcher
+	}
+
+	MODULE
+	{
 		name = ModuleKISItem
 		volumeOverride = 250
 		stackable = true
