--- a/GameData/WildBlueIndustries/Buffalo/Parts/Wheel/M1A1OmniWheel.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Wheel/M1A1OmniWheel.cfg
@@ -32,6 +32,7 @@ PART
 	breakingForce = 800
 	breakingTorque = 800
 	bulkheadProfiles = srf
+//	stagingIcon = DECOUPLER_VERT
 
 	MODULE
 	{
@@ -129,23 +130,16 @@ PART
 
 	MODULE
 	{
-		name = ModuleDecouple
-		ejectionForce = 150
+		name = WBIModuleDecouple
+		ejectionForce = 50
 		explosiveNodeID = front
 		stagingEnabled = false
+		isDecoupler = True
 	}
 
 	MODULE
 	{
-		name = ModuleDecouple
-		ejectionForce = 150
-		explosiveNodeID = srf
-		stagingEnabled = false
-	}
-
-	MODULE
-	{
-		name = WBIDecoupleSwitcher
+		name = WBISelfDestruct
 	}
 
 	MODULE
