--- a/GameData/WildBlueIndustries/Buffalo/Parts/Command/BuffaloCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Command/BuffaloCab.cfg
@@ -130,6 +130,7 @@ PART
 	{
 		name = WBILight
 		animationName = BuffaloHeadlights
+		toggleFriendAnimation = Buffalights
 		startEventGUIName = Headlights On
 		endEventGUIName = Headlights Off
 		actionGUIName = Toggle Headlights
